# whisper-server-docker

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: build.yml
