[project]
name = "whisper-server-docker"
version = "0.1.0"
description = "Faster-Whisper transcription service for Docker/Railway deployment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "faster-whisper>=1.0.0",
]

[project.scripts]
whisper-server = "app:main"
